--- a/src/main/resources/build.properties
+++ b/src/main/resources/build.properties
@@ -7,7 +7,8 @@
 appserver.home=D:/apache-tomcat-6.0.18
 appserver.lib=${appserver.home}/lib
 deploy.path=${appserver.home}/webapps
-
+server_name=localhost
+website =http://dcc.uchile.com
 tomcat.manager.url=http://localhost:8080/manager
 +tomcat.manager.username=tomcat
 +tomcat.manager.password=tomcat
