--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,34 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
         <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
 
-        <display-name>chileayuda.chilepersonfinder.webservice</display-name>
+        <display-name>People finder</display-name>
 
-        <context-param>
-            <param-name>contextConfigLocation</param-name>
-            <param-value>classpath:SearchServlet-servlet.xml</param-value>
-        </context-param>
+    <servlet>
+        <servlet-name>peoplefinder</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
 
+    <servlet-mapping>
+        <servlet-name>peoplefinder</servlet-name>
+        <url-pattern>/</url-pattern>
+    </servlet-mapping>
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>/WEB-INF/peoplefinder-servlet.xml</param-value>
+    </context-param>
 
-        <listener>
-            <listener-class>
-                org.springframework.web.context.ContextLoaderListener
-            </listener-class>
-        </listener>
-
-        <listener>
-            <listener-class>
-                org.springframework.web.context.request.RequestContextListener
-            </listener-class>
-        </listener>
-
-        <servlet>
-            <servlet-name>SearchServlet</servlet-name>
-            <servlet-class>chileayuda.chilepersonfinder.webservice.servlets.SearchServlet</servlet-class>
-        </servlet>
-        <servlet-mapping>
-            <servlet-name>SearchServlet</servlet-name>
-            <url-pattern>/chilepersonfinder</url-pattern>
-            <url-pattern>/chilepersonfinder/</url-pattern>
-        </servlet-mapping>
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
 
     </web-app>
