--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,12 @@
         <spring.version>4.0.6.RELEASE</spring.version>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>org.ccil.cowan.tagsoup</groupId>
+            <artifactId>tagsoup</artifactId>
+            <version>1.2</version>
+        </dependency>
+
         <dependency><!-- jackson -->
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-mapper-asl</artifactId><version>1.4.2</version>
