--- a/app/app.yaml
+++ b/app/app.yaml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-application: agildcc
+application: chileagils
 version: 1
 runtime: python27
 api_version: 1
